infra/static-site/deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: gke-test
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: gke-test
    spec:
      containers:
        - name: gke-test
          image: gcr.io/GKE_PROJECT/IMAGE:TAG
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
            limits:
              cpu: 100m
