infra/static-site/service.yml
kind: Service
apiVersion: v1
metadata:
  name: gke-test-service
spec:
  selector:
    app: gke-test
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
